--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         		<div class="col ">
         			<p class="project-heading">Decabase</p>
         			<hr>
-        			<a href="https://aamir-razdan.github.io/decabase3/"><img  class="image-project" src="Decabase3.png"></a>
+        			<a href="https://aamir-razdan.github.io/decabase3/"><img  class="image-project" src="decabase3.png"></a>
         		</div>
         		<div class="col ">
         			
