--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         		<div class="col ">
         			<p class="project-heading">portfolio</p>
         			<hr>
-        			<a href=""><img  class="image-project" src="Portfolio.png"></a>
+        			<a href=""><img  class="image-project" src="portfolio.png"></a>
         			
         		</div>
         	</div>
