--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
 				         	<ul><a class="second-link" href="">MY PROJECT</a></ul>
 				         </li>
 				         <li class="contact-link">
-						    <ul><a class="contact-me-link-1" href=""> <i class="icon fab fa-linkedin"></i>linkdin</a></ul>
+						    <ul><a class="contact-me-link-1" href="www.linkedin.com/in/aamir-razdan"> <i class="icon fab fa-linkedin"></i>linkdin</a></ul>
 						      
-					<ul> <a class="contact-me-link" href=""><i class=" icon fab fa-github"></i>github</a></ul>
+					<ul> <a class="contact-me-link" href="https://github.com/Aamir-Razdan"><i class=" icon fab fa-github"></i>github</a></ul>
 						         </li>
 				         <br>
                     </div>    
